[package]
name = "gluck"
version = "0.1.0"
edition = "2024"

[dependencies]
glib = "0.21.5"
gio = "0.21.4"
regex = "1.12.2"
taglib = "1.0.0"
dirs = "6.0.0"
crossbeam-channel = "0.5"
rand = "0.9.2"
mpv = "0.2.3"
libmpv2 = "5.0.2"
include_assets = "1.0.0"

[dependencies.gtk4]
version = "0.10.2"
features = ["v4_10"]
